update para usar java 1.8